--- a/SlnLes01HerhalingAanvulling/WpfTaken/WpfTaken.csproj
+++ b/SlnLes01HerhalingAanvulling/WpfTaken/WpfTaken.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5B397C85-F6F0-4C00-B343-764D1971A7B7}</ProjectGuid>
+    <ProjectGuid>{151F829E-1CFD-4EF5-B368-50BBC7687DCC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WpfComplexiteit</RootNamespace>
-    <AssemblyName>&amp;</AssemblyName>
+    <RootNamespace>WpfTaken</RootNamespace>
+    <AssemblyName>WpfTaken</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
